# wailandify

./: .gitignore  Dockerfile  LICENSE.txt  README.adoc  README.md  Taskfile.yml  desktop.go  flags.go  go.mod  main.go  pyproject.toml
cmd/lbdm/: command.go  config.go
src/wailandify/: __init__.py  backup.py  cli.py  config.py  default_config.toml  desktop.py  discovery.py
src/waylandify/: __init__.py  backup.py  cli.py  config.py  desktop.py  discovery.py
src/waylandify/data/: config.toml
